# polygone-evacuation-a5

./: .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  DEV_SETUP.md  HACKING.md  MAINTAINING.md  Makefile  README.md  auto-release.ps1  auto-release.sh  build.py  dockerfile  index.json  plan-evacuation.md  pyproject.toml  release.py  setup-complete.sh  style-pdf.css  tasks.ps1  update_changelog.py
.github/workflows/: build-pdf.yml
assets/: style-pdf.css
docs/: CHANGELOG.md  MAINTAINING.md  Polygone-Evacuation-a5.txt  mon_projet.txt
scripts/: update_changelog.py
tests/: test-clean.txt  test-hello.txt  test-manuel.txt  test_utf8.txt
tools/: utf8_utils.ps1
